fix games alignment

--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -7,8 +7,8 @@ main {
 .games-container {
   display: flex;
   margin-top: 10px;
-  align-items: flex-start;
-  justify-content: left;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 
